--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,4 @@
-email=info@mylandmarktech.com
+email=tahmichael_5@yahoo.co.uk
 ##always-auth=true
 _auth=YWRtaW46YWRtaW4xMjM=
-#echo -n 'admin:admin123' | openssl base64
 allowRepublish=true
