--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-email=tahmichael_5@yahoo.co.uk
+##email=tahmichael_5@yahoo.co.uk
 ##always-auth=true
-_auth=YWRtaW46YWRtaW4xMjM=
-allowRepublish=true
+##_auth=YWRtaW46YWRtaW4xMjM=
+##allowRepublish=true
