--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,5 @@
-##email=tahmichael_5@yahoo.co.uk
+registry=http://18.237.250.241:8081/repository/ebay-npm-repo/
+email=tahmichael_5@yahoo.co.uk
 ##always-auth=true
-##_auth=YWRtaW46YWRtaW4xMjM=
+_auth=YWRtaW46YWRtaW4xMjM=
 ##allowRepublish=true
