--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,5 @@
-registry=http://18.237.250.241:8081/repository/ebay-npm-repo/
-email=tahmichael_5@yahoo.co.uk
+##registry=http://18.237.250.241:8081/repository/ebay-npm-repo/
+##email=tahmichael_5@yahoo.co.uk
 ##always-auth=true
-_auth=YWRtaW46YWRtaW4xMjM=
-allowRepublish=true
+##_auth=YWRtaW46YWRtaW4xMjM=
+##allowRepublish=true
