--- a/.npmrc
+++ b/.npmrc
@@ -1,7 +1,6 @@
-##registry=http://18.237.250.241:8081/repository/ebay-npm-repo/
-##email=tahmichael_5@yahoo.co.uk
-##always-auth=true
-##_auth=YWRtaW46YWRtaW4xMjM=
+##registry=http://35.89.23.206:8081/repository/ebay-npm-repo/
+email=tahmichael_5@yahoo.co.uk
+always-auth=true
+_auth=YWRtaW46YWRtaW4xMjM=
 ##_auth=NpmToken.1cce9d16-9dd7-3715-bc2d-1f67ce22af37
-##_authToken=NpmToken.1cce9d16-9dd7-3715-bc2d-1f67ce22af37
-##allowRepublish=true
+allowRepublish=true
