--- a/.npmrc
+++ b/.npmrc
@@ -2,3 +2,4 @@ email=info@mylandmarktech.com
 ##always-auth=true
 _auth=YWRtaW46YWRtaW4xMjM=
 allowRepublish=true
+_authToken=NpmToken.1cce9d16-9dd7-3715-bc2d-1f67ce22af37
