--- a/.npmrc
+++ b/.npmrc
@@ -3,3 +3,5 @@ email=info@mylandmarktech.com
 _auth=YWRtaW46YWRtaW4xMjM=
 allowRepublish=true
 _authToken=NpmToken.1cce9d16-9dd7-3715-bc2d-1f67ce22af37
+registry.npmjs.org/:username=admin
+registry.npmjs.org/:_password=admin123
