--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,6 @@
 email=info@mylandmarktech.com
-##always-auth=true
-_auth=YWRtaW46YWRtaW4xMjM=
 allowRepublish=true
+registry.npmjs.org/:_auth="YWRtaW46YWRtaW4xMjM="
+registry.npmjs.org/:_authToken=NpmToken.1cce9d16-9dd7-3715-bc2d-1f67ce22af37
+registry.npmjs.org/:username=admin
+registry.npmjs.org/:_password=admin123
