--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,4 @@
 email=info@mylandmarktech.com
-allowRepublish=true
+#allowRepublish=true
 registry.npmjs.org/:_auth="YWRtaW46YWRtaW4xMjM="
-registry.npmjs.org/:_authToken=NpmToken.1cce9d16-9dd7-3715-bc2d-1f67ce22af37
-registry.npmjs.org/:username=admin
-registry.npmjs.org/:_password=admin123
+allowRepublish=true
